--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <meta property="og:title" content="BOVANN GROUP - Formations et Prestations Professionnelles" />
     <meta property="og:description" content="Formateur de talents et créateur de solutions innovantes dans les domaines de la communication, l'informatique et le multimédia." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Meta image et Twitter supprimés -->
   </head>
 
   <body>
